# TRDPwebSimulator

./: .gitignore  CMakeLists.txt  README.md  README_ANALYSIS.md
binary/: tcopentrdp-2.2.23-amd64.deb
cmake/: FindTAU.cmake  FindTRDP.cmake
cmake/tests/: drogon_config_check.cpp  trdp_config_check.cpp  trdp_pd_publish_check.cpp
configs/: default.xml
docs/: debian-packaging.md  md-web-feature-plan.md  md-xml-configuration.md  tcnopen-mdpatterns-learnings.md  trdp-stack-build-notes.md  trdp_integration_tasks.md
scripts/: setup_drogon.sh  smoke_test.sh  verify_static_access.sh
src/: main.cpp  telegram_model.cpp  telegram_model.h  trdp_engine.cpp  trdp_engine.h
src/controllers/: ConfigController.cpp  ConfigController.h  TelegramController.cpp  TelegramController.h  WsTelegram.cpp  WsTelegram.h
src/plugins/: TelegramHub.cpp  TelegramHub.h
static/: app.js  index.html  styles.css
